# termdriver2

./: LICENSE
circuitpython_demo/: .gitignore  demo.py  go
common/: c256.i  drawscreen.c  drawscreen.h  render_font_4x6.c  render_font_6x9_sub.c  state.h  text.c  text.h
demos/: reset_to_uf2.py
firmware/: CMakeLists.txt  README.md  go  main.c  memmap_td2.ld  panel.c  panel.h  tusb_config.h  tusb_serial_device_main.c  usb_descriptors.c
openscad/: desk-holder.scad  desk-holder.stl  desk-stand.scad  desk-stand.stl
